--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,7 @@
    <head>
       <meta charset="utf-8" />
       <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-      <meta name="viewport" content="width=device-width, initial-scale=1" />
       <meta name="theme-color" content="#000000" />
-      <meta
-        name="description"
-        content="Web site created using create-react-app"
-      />
       <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" />
       <!--
@@ -25,11 +20,26 @@
         work correctly both with client-side routing and a non-root public URL.
         Learn how to configure a non-root public URL by running `npm run build`.
       -->
-      <title>Personal website</title>
+      <title>Tasmeomeem personal website</title>
+      <meta name="keyword" content="React.js,bootstrap,HTML,css" />
+      <meta name="title" content="Tasmeomeem personal website" />
+      <meta name="description" contant="I'm Creative React Developer from Brandecy,
+      Bangladesh, working in as a web designer and frontend Developer.
+      I enjoy turning complex problems into simple,
+      beautiful and intuitive designs." />
+
+      <meta name="og:title" content="Tasmeomeem personal website" />
+      <meta name="og:description" content="I'm Creative React Developer from Brandecy,
+      Bangladesh, working in as a web designer and frontend Developer.
+      I enjoy turning complex problems into simple,
+      beautiful and intuitive designs." />
+      <meta name="og:image" content="./assets/image/meem.jpg" />
+      <meta name="og:url" contant="" />
+      <meta name="og:type" content="website" />
 
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-      
+
       <link rel="stylesheet" type="text/css" href="/assets/css/style.css">
 
       <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
